# fastkokoro

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile.cpu  Dockerfile.gpu  Dockerfile.gpu-legacy  Dockerfile.gpu-trt-legacy  Dockerfile.gpu-trt-ort-source  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  publish.yml  validate-release.yml
docker/: Dockerfile.cpu  Dockerfile.gpu  Dockerfile.gpu-legacy  Dockerfile.tensorrt
docs/: fixed-shape-plan.md  latency-benchmarks.md  streaming-benchmarks.md  video-demo.md
examples/: tts_save_file.py  tts_stream_chunks.py  video_demo_script.txt
experiments/: bench_conv_adain.py  fuse_adain.py  fuse_conv_adain.py  fuse_stft.py  stft_custom_op.c
experiments/voice-encoder/: Dockerfile  README.md  config.example.json  requirements.txt
experiments/voice-encoder/scripts/: download_public_sources.sh  generate_synthetic_dataset.py  inspect_voicepacks.py
scripts/: __init__.py  analyze_cuda_fusion_candidates.py  benchmark_corpus.py  benchmark_gpu_ttfc.py  benchmark_latency.py  benchmark_streaming.py  build_cuda_adain_op.py  colab_setup.sh  compare_fixed_shape_variants.py  export_kokoro_torch_ttfc.py  inspect_onnx_fixed_shape.py  optimize_kokoro_onnx.py  profile_backend.py  profile_kokoro_pipeline.py  profile_kokoro_torch.py  profile_onnx_hotspots.py  profile_streaming_ttfc.py  record_streaming_terminal_demo.sh  release.sh  render_streaming_video_demo.sh  stream_speech_to_pcm.py  validate_fixed_shape_variants.py
src/fastkokoro/: __init__.py  assets.py  audio.py  build_adain_op.py  build_conv_adain_op.py  build_cuda_adain_op.py  cli.py  config.py  engine.py  fixed_shape_analysis.py  fixed_shape_experiments.py  graph_fusion.py  inspect_fixed_shapes.py  json.py  kokoro.py  metrics.py  onnx.py  onnx_simplification.py  openai.py  profiling.py  quantization.py  server.py  streaming.py  voices.py
src/fastkokoro/native/: __init__.py  adain_cuda_custom_op.cu  adain_custom_op.c  conv_adain_custom_op.c
tests/: test_assets.py  test_audio.py  test_build_adain_op.py  test_cli.py  test_config.py  test_engine.py  test_export_kokoro_torch_ttfc.py  test_fixed_shape_analysis.py  test_fixed_shape_experiments.py  test_graph_fusion.py  test_kokoro.py  test_onnx.py  test_optimize_kokoro_onnx.py  test_quantization.py  test_server.py  test_streaming.py  test_voices.py
