[project]
name = "fastkokoro"
version = "0.2.0"
description = "Lightweight OpenAI-compatible Kokoro TTS server powered by ONNX Runtime"
readme = "README.md"
authors = [
    { name = "Vilson Rodrigues", email = "vilson@msgflux.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "huggingface-hub>=0.36.0",
    "kokoro-onnx>=0.5.0",
    "numpy>=2.0.0",
    "onnx>=1.16.0",
    "onnx-ir>=0.1.0",
    "onnxruntime>=1.22.0",
    "orjson>=3.10.0",
    "pydantic>=2.0.0",
    "soundfile>=0.13.0",
    "sympy>=1.13.0",
    "uvicorn>=0.32.0",
    "uvloop>=0.21.0 ; sys_platform != 'win32'",
]

[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu>=1.20.0; platform_machine == 'x86_64' and sys_platform != 'darwin'",
]

[project.scripts]
fastkokoro = "fastkokoro.cli:main"
fastkokoro-build-adain-op = "fastkokoro.build_adain_op:main"

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "packaging>=24.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.0",
    "twine>=6.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
