[project]
name = "fastkokoro"
version = "0.6.2"
description = "Lightweight OpenAI-compatible Kokoro TTS server powered by ONNX Runtime"
readme = "README.md"
authors = [
    { name = "Vilson Rodrigues", email = "vilson@msgflux.com" }
]
requires-python = ">=3.11"
dependencies = [
    "espeakng-loader>=0.2.0",
    "fastapi>=0.115.0",
    "huggingface-hub>=0.36.0",
    "misaki[zh]>=0.9.4,<1",
    "misaki-ja-lightning[unidic]>=2.0.3,<3",
    "numba>=0.65.0",
    "numpy>=1.26,<3",
    "onnx>=1.16.0",
    "onnx-ir>=0.1.0",
    "onnxsim>=0.4.36",
    "orjson>=3.10.0",
    "phonemizer-fork>=3.3.2",
    "pydantic>=2.0.0",
    "soundfile>=0.13.0",
    "sympy>=1.13.0",
    "uvicorn>=0.32.0",
    "uvloop>=0.21.0 ; sys_platform != 'win32'",
]

[project.optional-dependencies]
cpu = [
    "onnxruntime>=1.18.1",
]
gpu = [
    "onnxruntime-gpu>=1.18.1; platform_machine == 'x86_64' and sys_platform != 'darwin'",
]
gpu-legacy = [
    "onnxruntime-gpu==1.18.1; platform_machine == 'x86_64' and sys_platform != 'darwin'",
]

[project.scripts]
fastkokoro = "fastkokoro.cli:main"

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "packaging>=24.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.0",
    "twine>=6.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
